fixed line break in long word in dasboard

--- a/styles/components/_dashboardDetailInfo.scss
+++ b/styles/components/_dashboardDetailInfo.scss
@@ -53,6 +53,7 @@
     line-height: 21px;
     letter-spacing: 0em;
     text-align: right;
+    overflow-wrap: break-word;
   }
   &__cardRowButton {
     display: flex;
